command line compiler example (still with cli problems), introduced compiler settings support
git-svn-id: https://svn.apache.org/repos/asf/jakarta/commons/sandbox/jci/trunk@518853 13f79535-47bb-0310-9956-ffa450edef68