@@ -17,96 +17,174 @@
 
 package org.apache.commons.jci.examples.commandline;
 
+import java.io.File;
+import java.net.URL;
+import java.net.URLClassLoader;
+import java.util.Iterator;
+
+import org.apache.commons.cli.CommandLine;
+import org.apache.commons.cli.CommandLineParser;
+import org.apache.commons.cli.GnuParser;
+import org.apache.commons.cli.HelpFormatter;
+import org.apache.commons.cli.Option;
+import org.apache.commons.cli.OptionBuilder;
+import org.apache.commons.cli.Options;
+import org.apache.commons.jci.compilers.CompilationResult;
+import org.apache.commons.jci.compilers.JavaCompiler;
+import org.apache.commons.jci.compilers.JavaCompilerFactory;
+import org.apache.commons.jci.compilers.JavaCompilerSettings;
+import org.apache.commons.jci.problems.CompilationProblem;
+import org.apache.commons.jci.problems.CompilationProblemHandler;
+import org.apache.commons.jci.readers.FileResourceReader;
+import org.apache.commons.jci.readers.ResourceReader;
+import org.apache.commons.jci.stores.FileResourceStore;
+import org.apache.commons.jci.stores.ResourceStore;
+
 /**
- * 
- * @author tcurdt
+ *  * @author tcurdt
  */
 public final class CommandlineCompiler {
     
     public static void main( String[] args ) throws Exception {
-        /*
+
 		final Options options = new Options();
-		options.addOption("classpath", false, "classpath");
-		options.addOption("source", false, "classpath");
-		options.addOption("target", false, "classpath");
-
-		final CommandLineParser = new PossixParser();
-		final CommandLine cmd = parser.parse(options, args);
-
-		final JavaCompilerSettingsFactory settingsFactory = new ProperitesJavaCompilerSettingsFactory("compiler.properties")
-		final JavaCompilerSettingsFactory settingsFactory = new AvalonJavaCompilerSettingsFactory(configuration)
-		final JavaCompilerSettingsFactory settingsFactory = new XmlJavaCompilerSettingsFactory("compiler-settings.xml")
-		final JavaCompilerSettingsFactory settingsFactory = new CliJavaCompilerSettingsFactory(cmd);
-    	
-        final JavaCompilerSettings settings = settingsFactory.createSettings();
-        final JavaCompiler compiler = JavaCompilerFactory.getInstance().createCompiler(settings);
-        //final JavaCompiler compiler = settings.createCompiler();
-
-
-
-  -g                         Generate all debugging info
-  -g:none                    Generate no debugging info
-  -g:{lines,vars,source}     Generate only some debugging info
-  -nowarn                    Generate no warnings
-  -verbose                   Output messages about what the compiler is doing
-  -deprecation               Output source locations where deprecated APIs are used
-  -classpath <path>          Specify where to find user class files
-  -sourcepath <path>         Specify where to find input source files
-  -bootclasspath <path>      Override location of bootstrap class files
-  -extdirs <dirs>            Override location of installed extensions
-  -endorseddirs <dirs>       Override location of endorsed standards path
-  -d <directory>             Specify where to place generated class files
-  -encoding <encoding>       Specify character encoding used by source files
-  -source <release>          Provide source compatibility with specified release
-  -target <release>          Generate class files for specific VM version
-
-  -J<flag>                   Pass <flag> directly to the runtime system
-  -Xlint                     Enable recommended warnings
-  -Xlint:{all,deprecation,unchecked,fallthrough,path,serial,finally,-deprecation,-unchecked,-fallthrough,-path,-serial,-finally}Enable or disable specific warnings
-  -Xbootclasspath/p:<path>   Prepend to the bootstrap class path
-  -Xbootclasspath/a:<path>   Append to the bootstrap class path
-  -Xbootclasspath:<path>     Override location of bootstrap class files
-  -Djava.ext.dirs=<dirs>     Override location of installed extensions
-  -Djava.endorsed.dirs=<dirs>Override location of endorsed standards path
-  -Xmaxerrs <number>         Set the maximum number of errors to print
-  -Xmaxwarns <number>        Set the maximum number of warnings to print
-  -Xstdout <filename>        Redirect standard output
-
-        map.put(CompilerOptions.OPTION_LineNumberAttribute, CompilerOptions.GENERATE);
-        map.put(CompilerOptions.OPTION_SourceFileAttribute, CompilerOptions.GENERATE);
-        map.put(CompilerOptions.OPTION_ReportDeprecation, CompilerOptions.GENERATE);
-        map.put(CompilerOptions.OPTION_ReportUnusedImport, CompilerOptions.IGNORE);
-        map.put(CompilerOptions.OPTION_Encoding, "UTF-8");
-        map.put(CompilerOptions.OPTION_LocalVariableAttribute, CompilerOptions.GENERATE);
-        map.put(CompilerOptions.OPTION_Source, CompilerOptions.VERSION_1_4);
-        map.put(CompilerOptions.OPTION_TargetPlatform, CompilerOptions.VERSION_1_4);
-
-
-
-
-		settings.put(CompilerOptions.TARGET_VERSION, "1.4");
-		settings.put(CompilerOptions.SOURCE_VERSION, "1.4");
-
-		*/
 		
-		/*
-    	final URL[] classpath = {
-    		new URL("a.jar"),
-    		new URL("b.jar")
-    	};
-    	final URL[] classpath = settings.getClasspath();
+		options.addOption(
+				OptionBuilder.withArgName("a.jar:b.jar")
+					.hasArg()
+					.withValueSeparator( ':' )
+					.withDescription("Specify where to find user class files")
+					.create( "classpath" ));
 
-    	final ClassLoader classloader = new URLClassLoader(classpath);
+		options.addOption(
+				OptionBuilder.withArgName("release")
+					.hasArg()
+					.withDescription("Provide source compatibility with specified release")
+					.create( "source" ));
+
+		options.addOption(
+				OptionBuilder.withArgName("release")
+					.hasArg()
+					.withDescription("Generate class files for specific VM version")
+					.create( "target" ));
+
+		options.addOption(
+				OptionBuilder.withArgName("path")
+					.hasArg()
+					.withDescription("Specify where to find input source files")
+					.create( "sourcepath" ));
+
+		options.addOption(
+				OptionBuilder.withArgName("directory")
+					.hasArg()
+					.withDescription("Specify where to place generated class files")
+					.create( "d" ));
+
+		options.addOption(
+				OptionBuilder.withArgName("num")
+					.hasArg()
+					.withDescription("Stop compilation after these number of errors")
+					.create( "Xmaxerrs" ));
+
+		options.addOption(
+				OptionBuilder.withArgName("num")
+					.hasArg()
+					.withDescription("Stop compilation after these number of warning")
+					.create( "Xmaxwarns" ));
+
+		options.addOption(
+				OptionBuilder.withDescription("Generate no warnings")
+					.create( "nowarn" ));
+		
+		final HelpFormatter formatter = new HelpFormatter();
+		formatter.printHelp("jci", options);
+		
+		final CommandLineParser parser = new GnuParser();
+		final CommandLine cmd = parser.parse(options, args, true);
+
+		ClassLoader classloader = CommandlineCompiler.class.getClassLoader();
+		File sourcepath = new File(".");
+		File targetpath = new File(".");
+		int maxerrs = 10;
+		int maxwarns = 10;
+		final boolean nowarn = cmd.hasOption("nowarn");
+		
+		
+		final JavaCompiler compiler = new JavaCompilerFactory().createCompiler("eclipse");		
+		final JavaCompilerSettings settings = compiler.createDefaultSettings();
+		
+		
+		for (Iterator it = cmd.iterator(); it.hasNext();) {
+			final Option option = (Option) it.next();
+			
+			if ("classpath".equals(option.getOpt())) {
+				final String[] values = option.getValues();
+				final URL[] urls = new URL[values.length];
+				for (int i = 0; i < urls.length; i++) {
+					urls[i] = new File(values[i]).toURL();
+				}
+				classloader = new URLClassLoader(urls);
+			} else if ("source".equals(option.getOpt())) {
+				settings.setSourceVersion(option.getValue());
+			} else if ("target".equals(option.getOpt())) {
+				settings.setTargetVersion(option.getValue());
+			} else if ("sourcepath".equals(option.getOpt())) {
+				sourcepath = new File(option.getValue());
+			} else if ("d".equals(option.getOpt())) {
+				targetpath = new File(option.getValue());
+			} else if ("Xmaxerrs".equals(option.getOpt())) {
+				maxerrs = Integer.parseInt(option.getValue());
+			} else if ("Xmaxwarns".equals(option.getOpt())) {
+				maxwarns = Integer.parseInt(option.getValue());
+			}
+		}
+		
+		System.out.println(settings);
+		
+        final ResourceReader reader = new FileResourceReader(sourcepath);
+        final ResourceStore store = new FileResourceStore(targetpath);
         
-        final ResourceReader reader = new FileResourceReader(new File("srcdir"));
-        final ResourceStore store = new MemoryResourceStore();
+        final int maxErrors = maxerrs;
+        final int maxWarnings = maxwarns;
+        compiler.setCompilationProblemHandler(new CompilationProblemHandler() {
+        	int errors = 0;
+        	int warnings = 0;
+			public boolean handle(final CompilationProblem pProblem) {				
+
+				if (pProblem.isError()) {
+					System.err.println(pProblem);				
+
+					errors++;
+
+					if (errors >= maxErrors) {
+						return false;
+					}
+				} else {
+					if (!nowarn) {
+						System.err.println(pProblem);				
+					}
+					
+					warnings++;
+
+					if (warnings >= maxWarnings) {
+						return false;
+					}
+				}
+				
+				return true;
+			}        	
+        });
         
-        final String[] resources = new String[] {
-        	"org/my/Test.java",
-        	"org/my/Something.java"
-        };
+        final String[] resource = cmd.getArgs();
         
-        compiler.compile(resources, reader, store, classloader);
-		*/
+        for (int i = 0; i < resource.length; i++) {
+			System.out.println("compiling " + resource[i]);
+		}
+        
+        final CompilationResult result = compiler.compile(resource, reader, store, classloader);
+        
+        System.out.println( result.getErrors().length + " errors");
+        System.out.println( result.getWarnings().length + " warnings");
+
     }
 }
